# pi-quant

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  bench.cpp  q8_kernel.inl  q8_kernel_avx2.S  q8_kernel_avx512f.S  q8_kernel_sse41.S  quant.cpp  quant.hpp
.github/workflows/: build-wheels.yml  cmake-multi-platform.yml
benchmark/: CMakeLists.txt  bench.cpp
include/: piquant.h  piquant.hpp  quant.h  quant.hpp
python/: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  setup.py
python/benchmark/: benchmark.py  throughput_avg.py  throughput_single.py
python/example/: example.py  example_torch.py  plot_stochastic_rounding_acc.py
python/framework/: .gitignore  install.sh  ruff.toml  setup.py
python/framework/quant/: _loader.py
python/src/: setup.py
python/src/piquant/: __init__.py  _bootstrap.py  _core.py  _loader.py  _numpy.py  _quant.py  _torch.py  torch.py
python/src/piquant/_compat/: __init__.py  api_numpy.py  api_torch.py
python/src/quant/: __init__.py  _loader.py  _quant.py
python/test/: requirements.txt  test.py
python/tests/: meow.py  test_numpy.py  test_simple.py  test_tensor.py  test_torch.py
src/: capi.cpp  kernel_amd64_avx2.cpp  kernel_amd64_avx512f.cpp  kernel_amd64_sse42.cpp  kernel_generic.cpp  kernels.inl  piquant.cpp  piquant_internal.hpp  prng.hpp  q8_kernel.inl  quant.cpp  quant.hpp
src/amd64/: kernel_amd64_avx2.cpp  kernel_amd64_avx512f.cpp  kernel_amd64_avx512f_bf16.cpp  kernel_amd64_sse42.cpp
src/kernels/: dequantize.inl  kernels.inl  kernels_generic.inl  kernels_specialized.inl  prng.inl  quantize.inl
test/: CMakeLists.txt  dequant.cpp  naive.hpp  piquant.cpp  quant.cpp  quant_config.cpp  quant_range.cpp  requant.cpp  test.cpp
