[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypiquant"
dynamic = ["version"]
authors = [
    {name = "Mario Sieg", email = "mario.sieg.64@gmail.com"},
]
description = "Multithreaded SIMD int8 and int4 quantization kernels."
dependencies = ["cffi", "torch", "numpy"]
readme = "README.md"

[project.urls]
Documentation = "https://github.com/PrimeIntellect-ai/pi-quant"
Repository = "https://github.com/PrimeIntellect-ai/pi-quant"
Issues = "https://github.com/PrimeIntellect-ai/pi-quant/issues"

[project.optional-dependencies]
dev = ["pytest","torch","numpy","pre-commit","ruff", "matplotlib", "twine"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.setuptools.dynamic]
version = {attr = "pypiquant.__version__"}

[tool.ruff.lint]
ignore = ["F403"]
select = ["ANN"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["ANN"]
