[project]
license = "MIT"

[metadata]
name = pypiquant
version = 1.0.0
author = Mario Sieg, Michael Keiblinger
author_email = mario@primeintellect.ai, mike@primeintellect.ai
description = Fast, multithreaded CPU quantization kernels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrimeIntellect-ai/pi-quant
project_urls =
    Bug Tracker = https://github.com/PrimeIntellect-ai/pi-quant/issues
python_requires = >=3.12
include_package_data = True
zip_safe = False