enable_testing()
add_subdirectory(googletest)
file(GLOB_RECURSE TEST_SOURCES *.cpp)
add_executable(quant_test ${TEST_SOURCES})
target_include_directories(quant_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(quant_test PRIVATE piquant GTest::gtest_main)
add_test(NAME quant_test COMMAND quant_test)
