enable_testing()
add_subdirectory(googletest)
file(GLOB_RECURSE TEST_SOURCES *.cpp)
add_executable(piquant_tests ${TEST_SOURCES})
target_include_directories(piquant_tests PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(piquant_tests PRIVATE piquant GTest::gtest_main)
add_test(NAME piquant_tests COMMAND piquant_tests)
